turtleart.lessons.turtleart.Main.Stairs.scala.error
Source:7: error: missing arguments for method droite in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
		droite
                ^Source:9: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
		gauche()
                      ^