turtleart.lessons.turtleart.Main.Stairs.scala.code
override def run() 
{
	for (n<-1 to 6)
	{
		avance(35)
		droite
		avance(35)
		gauche()
	}
}
